--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.5",
+        "@vuepic/vue-datepicker": "^9.0.1",
         "mobile-device-detect": "^0.4.3"
     }
 }
