--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
+        "ncp": "^2.0.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0",
@@ -19,7 +20,12 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.1.5",
+        "@ionic/vue": "^8.2.6",
         "@vuepic/vue-datepicker": "^9.0.1",
-        "mobile-device-detect": "^0.4.3"
+        "dynamsoft-capture-vision-router": "^2.0.11",
+        "ionicons": "^7.4.0",
+        "jscanify": "^1.2.0",
+        "mobile-device-detect": "^0.4.3",
+        "mobile-web-capture": "^18.0.3"
     }
 }
